Add package information for Zerotier. This is taken from https://github.com/Trellis-Logic/buildroot-external/tree/zerotier. Note that it is necessary to configure the BR Linux Kernel with the TUN module.

--- a/package/Config.in
+++ b/package/Config.in
@@ -1962,6 +1962,7 @@ endif
 	source "package/xl2tp/Config.in"
 	source "package/xtables-addons/Config.in"
 	source "package/znc/Config.in"
+	source "package/zerotier/Config.in"
 
 endmenu
 
